migrate to java 17 approach for type boxing